# plugin-enigma2

./: Makefile.am  README.md  configure.ac
GioppyGio/CONTROL/: control
GioppyGio/po/: GioppyGio.pot  Makefile.am  cs.po  de.po  en.po  es_ES.po  it.po  nl.po  pl.po  sk.po
GioppyGio/src/: Makefile.am  __init__.py  plugin.py
GioppyGio/src/Moduli/: Config.py  Makefile.am  Select.py  Setting.py  __init__.pyo
GioppyGio/src/Panel/: Makefile.am  Thumbs.db
GioppyGio/src/Skin/: Makefile.am  Message.xml  skinFHD.xml  skinhd.xml
ardmediathek/src/: plugin.py
audiosync/src/: plugin.py
autoresolution/src/: plugin.py
autotimer/src/: plugin.py
dreammediathek/src/: maintainer.info
elektro/src/: __init__.py  plugin.pot
epgsearch/src/: EPGSearch.py
fancontrol2/src/: __init__.py  plugin.pot
fritzcall/src/: maintainer.info  reverselookup.xml
genuinedreambox/src/: maintainer.info
networkbrowser/src/: MountEdit.py
partnerbox/src/servicewebts/: servicewebts.cpp  servicewebts.h
pushservice/src/: plugin.py
rsdownloader/src/: plugin.py
seekbar/src/: plugin.py
subsdownloader2/src/: pluginOnlineContent.py
subsdownloader2/src/SourceCode/: GetFPS.py  GetFPS_MI.py  MediaInfoDLL.py  anysub2srt.py  archives_extractor.py  chardet_OutpuyTranslation.py
videocolorspace/CONTROL/: control
vlcplayer/src/servicets/: servicets.cpp  servicets.h
weathercomponent/src/: Makefile.am
weathercomponenthandler/src/: Makefile.am
weatherplugin/src/: Makefile.am
weatherplugin/src/icons/: Makefile.am
webbouqueteditor/src/web-data/: tools.js
(+8 files in other folders)
